# srr_ws

./: .gitignore  README.md  ws_build.sh
src/srr/docs/kinematics/: arm_kinematics_notes.xopp  vehicle_velocity_kinematics_notes.xopp
src/srr/latex/sample_return_rover/: references.bib  sample_return_rover.tex
src/srr/latex/sample_return_rover/section/robot-design/: vel_kinematics.tex
src/srr/latex/sample_return_rover/sections/abstract/: abstract.tex
src/srr/latex/sample_return_rover/sections/introduction/: introduction.tex
src/srr/latex/sample_return_rover/sections/robot-design/: fwd_kinematics.tex  inv_kinematics.tex  robot_design.tex  vel_kinematics.tex
src/srr/latex/sample_return_rover/sections/scope/: conclusion.tex  model_validation.tex  scope_ach.tex
src/srr/latex/traction_control/: references.bib  traction_control.tex
src/srr/latex/traction_control/sections/algorithms/: algorithms.tex
src/srr/latex/traction_control/sections/conclusion/: conclusion.tex
src/srr/latex/traction_control/sections/discussion/: discussion.tex
src/srr/latex/traction_control/sections/introduction/: abstract.tex  introduction.tex
src/srr_kinematics/: CMakeLists.txt  package.xml
src/srr_kinematics/include/srr_kinematics/: ArmKinContainer.hpp  CombinedKinContainer.hpp  JointOffsetsCollection.hpp  TractionControlContainer.hpp  VehicleVelKinContainer.hpp
src/srr_kinematics/src/: ArmKinCalculator.cpp  ArmKinContainer.cpp  CombinedKinCalculator.cpp  CombinedKinContainer.cpp  IncorporateJointOffsetsServer.cpp  JointOffsetsCollection.cpp  TractionControlContainer.cpp  TractionController.cpp  VehicleVelKinCalculator.cpp  VehicleVelKinContainer.cpp
src/srr_msgs/: CMakeLists.txt  package.xml
src/srr_msgs/msg/: ArmCartesianPose.msg  ArmJointPose.msg  CombinedProgram.msg  IndexedDoubleArr.msg  RotationMatrix.msg  TractionControlDebug.msg  VehiclePath.msg  VehicleVelKinDebug.msg  VehicleVelKinSegment.msg  VehicleVelKinSolution.msg
src/srr_msgs/srv/: CalculateArmFwdKin.srv  CalculateArmInvKin.srv  CalculateCombinedKin.srv  CalculatePositionWithOffsets.srv  CalculateVehicleVelKin.srv  GetDirectionOfRotation.srv
src/srr_program/: CMakeLists.txt  package.xml
src/srr_program/include/srr_program/: AbstractProgramStateMachine.hpp  ArmProgramStateMachine.hpp  CombinedProgramStateMachine.hpp  VehicleProgramStateMachine.hpp
src/srr_program/src/: ArmProgramStateMachineNode.cpp  CombinedProgramStateMachineNode.cpp  VehicleProgramStateMachineNode.cpp
src/srr_sim/: CMakeLists.txt  package.xml
src/srr_sim/config/: arm_controllers.yaml  joint_names_sra.yaml  joint_names_srr.yaml  vehicle_controllers.yaml
src/srr_sim/launch/: combined.launch  main.launch  sra.launch  sra_main.launch  srr.launch
src/srr_sim/meshes/: Front_Left.STL  Front_Left_Rev_Link.STL  Front_Left_Wheel.STL  Front_Right.STL  Front_Right_Rev_Link.STL  Front_Right_Wheel.STL  Rear_Left.STL  Rear_Left_Wheel.STL  Rear_Right.STL  Rear_Right_Fixed_Link.STL  Rear_Right_Wheel.STL  base_link.STL
src/srr_sim/meshes/sra/: ArmBaseLink.STL  ArmDummyLink.STL  BaseToShoulderLink.STL  ElbowDummyToElbowLink.STL  ElbowToWristDummyLink.STL  Gripper.STL  GripperToFinger.STL  LeftFinger.STL  RightFinger.STL  ShoulderToElbowDummyLink.STL  WristDummyToWristLink.STL  WristToGripperLink.STL
src/srr_sim/meshes/srr/: Front_Left_Rev_Link.STL  Front_Right_Wheel.STL  Rear_Left_Fixed_Link.STL  Rear_Left_Wheel.STL  Vehicle_Base_Link.STL
src/srr_sim/urdf/: combined_integrated.urdf.xacro  sra.csv  sra.urdf  sra_integrated.urdf.xacro  srr.csv  srr.urdf  srr_integrated.urdf.xacro
src/srr_sim/world/: basic.world
src/srr_teleop/: CMakeLists.txt  package.xml
src/srr_teleop/scripts/: arm_teleop.py  force_set_positions.py  input_combined_move.py  input_vehicle_path.py  kin_callers.py  teleop.py  test_vehicle_vel_kin.py  vehicle_teleop.py  vehicle_vel_kin_caller.py
src/srr_utils/: CMakeLists.txt  package.xml
src/srr_utils/include/srr_utils/: math_utils.hpp  ros_utils.hpp  string_utils.hpp
