<?xml version="1.0"?>
<package format="2">
  <name>srr_kinematics</name>
  <version>0.0.0</version>
  <description>The srr_kinematics package</description>
  <maintainer email="rnvandemark@gmail.com">R. Nick Vandemark</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>srr_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>gazebo_msgs</depend>
  <depend>srr_utils</depend>

</package>
