<?xml version="1.0"?>
<package format="2">
  <name>srr_msgs</name>
  <version>0.0.0</version>
  <description>The srr_msgs package</description>
  <maintainer email="rnvandemark@gmail.com">R. Nick Vandemark</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <build_depend>message_generation</build_depend>

</package>
