<?xml version="1.0"?>
<package format="2">
  <name>srr_program</name>
  <version>0.0.0</version>
  <description>The srr_program package</description>
  <maintainer email="rnvandemark@gmail.com">R. Nick Vandemark</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>srr_msgs</depend>

</package>
